--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "ladumor/one-signal": "^3.0",
         "laravel/framework": "5.8.*",
+        "laravel/socialite": "^4.4",
         "laravel/tinker": "^1.0",
         "namnv609/php-onesignal-sdk": "^1.0"
     },
