--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:FYkMMyaN9iVGEHeiFyivhbBRVKZQ04MPYinUcxKJC/c=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -42,3 +42,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+ONESIGNAL_APP_ID=835cf4cd-4bfd-49c0-bfa1-458988d1161b
+ONESIGNAL_APP_AUTHORIZE=ZDQ1Mjc4NjctOGE0Mi00MjVkLWE5YjEtMmM2NDNlMDU2Yjdl
+ONESIGNAL_APP_URL=http://45.124.95.29/coin
