--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "aws/aws-sdk-php": "~3.0",
+        "aws/aws-sdk-php-laravel": "^3.6",
         "fideloper/proxy": "^4.0",
         "ladumor/one-signal": "^3.0",
         "laravel/framework": "5.8.*",
