--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:FYkMMyaN9iVGEHeiFyivhbBRVKZQ04MPYinUcxKJC/c=
+APP_KEY=base64:mBHHZulIhqBz2V/j01w0J2ikQ7vRtN96sI18SjZrvI8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=coin_manage
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=backmt
+DB_PASSWORD=backmt@123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -32,7 +32,7 @@ MAIL_ENCRYPTION=null
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
+AWS_DEFAULT_REGION=us-east-2
 AWS_BUCKET=
 
 PUSHER_APP_ID=
@@ -44,6 +44,5 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-ONESIGNAL_APP_ID=835cf4cd-4bfd-49c0-bfa1-458988d1161b
-ONESIGNAL_APP_AUTHORIZE=ZDQ1Mjc4NjctOGE0Mi00MjVkLWE5YjEtMmM2NDNlMDU2Yjdl
-ONESIGNAL_APP_URL=http://45.124.95.29/coin
+
+
