--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "fideloper/proxy": "^4.0",
         "ladumor/one-signal": "^3.0",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "7.5.1",
         "laravel/socialite": "^4.4",
         "laravel/tinker": "^1.0",
+        "lcobucci/jwt": "3.3.3",
         "namnv609/php-onesignal-sdk": "^1.0"
     },
     "require-dev": {
